--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div id="fr" class="lang">
     <p>Majify Technologies est une entreprise enregistrée au Québec.</p>
     <ul>
-      <li><strong>NEQ :</strong> En attente</li>
+      <li><strong>NEQ : </strong>1181108862</li>
       <li><strong>Email :</strong> <a href="mailto:info@majify.tech">info@majify.tech</a></li>
     </ul>
     <p>
