--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <title>Majify Technologies</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script>fetch("index.html?_="+Date.now(),{cache:"no-store"}).then(r=>r.text()).then(t=>/<!--\s*version:\s*(.*?)\s*-->/i.test(t)&&RegExp.$1.trim()
+            !=="2025-07-26" &&location.reload());</script>
+  <!-- version: 2025-07-26 -->
   <style>
     body {
       font-family: sans-serif;
