--- a/index.html
+++ b/index.html
@@ -38,10 +38,34 @@
       margin-top: 2em;
       white-space: pre-wrap;
     }
+    
+
+      .brand {
+          font-weight: bold;
+          font-style: normal;
+          font-size: 1.01em;
+          font-family: sans-serif;
+      }
+      .brandify {
+          font-weight: normal;
+          font-family: sans-serif;
+          font-size: 0.95em;
+      }
+      .tech {
+          font-weight: normal;
+          color: #333366;
+          font-style: italic;
+          font-family: sans-serif;
+          font-size: 0.85em;
+          text-decoration: underline;
+      }
+
+
   </style>
 </head>
 <body>
-  <h1>Majify Technologies</h1>
+   <h1><span class="brand">Maj</span><span class="brandify">ify</span> <span class="tech">Technologies</span></h1>
+
 
   <!-- Version FR -->
   <div id="fr" class="lang">
