--- a/index.html
+++ b/index.html
@@ -7,7 +7,33 @@
   <script>fetch("index.html?_="+Date.now(),{cache:"no-store"}).then(r=>r.text()).then(t=>/<!--\s*version:\s*(.*?)\s*-->/i.test(t)&&RegExp.$1.trim()
            !=="v0001" &&location.reload());</script>
   <!-- version:v0001 -->
+  
+<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
+
+
+
   <style>
+  .brand {
+  
+     font-weight: 700;
+     font-size: 1.6em;
+     color: #2962FF; /* Majify Blue */
+     line-height: 1.2;
+     font-family: 'Barlow', sans-serif;
+   }
+
+   .tech {
+     display: block;
+     font-weight: 400;
+     font-size: 0.83em;
+     color: #555;
+     letter-spacing: 1px;
+     margin-top: -0.7em; 
+     font-family: 'Barlow', sans-serif;
+   }
+
+  
+  
     body {
       font-family: sans-serif;
       max-width: 700px;
@@ -40,31 +66,12 @@
     }
     
 
-      .brand {
-          font-weight: bold;
-          font-style: normal;
-          font-size: 1.01em;
-          font-family: sans-serif;
-      }
-      .brandify {
-          font-weight: normal;
-          font-family: sans-serif;
-          font-size: 0.95em;
-      }
-      .tech {
-          font-weight: normal;
-          color: #333366;
-          font-style: italic;
-          font-family: sans-serif;
-          font-size: 0.85em;
-          text-decoration: underline;
-      }
 
 
   </style>
 </head>
 <body>
-   <h1><span class="brand">Maj</span><span class="brandify">ify</span> <span class="tech">Technologies</span></h1>
+   <h1><span class="brand">Majify</span> <span class="tech">Technologies</span></h1>
 
 
   <!-- Version FR -->
