--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
      font-weight: 700;
      font-size: 1.6em;
-     color: #2962FF; /* Majify Blue */
+     color: #1166E0; /* Majify Blue */
      line-height: 1.2;
      font-family: 'Barlow', sans-serif;
    }
