--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <title>Majify Technologies</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script>fetch("index.html?_="+Date.now(),{cache:"no-store"}).then(r=>r.text()).then(t=>/<!--\s*version:\s*(.*?)\s*-->/i.test(t)&&RegExp.$1.trim()
-           !=="v0001" &&location.reload());</script>
-  <!-- version:v0001 -->
+  <script defer src="version.js"></script>
   
+
 <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
 
 
